# metaplasm

./: .gitignore  .gitmodules  README.md  config.toml  metaplasm.cabal  stack.yaml
app/: Main.hs
content/: 2013-03-28-better-scala-syntax-highlighting-for-hakyll.md  2013-05-29-lots-of-little-trees.md  2013-06-05-applicative-validation-syntax.md  2013-06-07-lots-of-little-trees-part-2.md  2013-06-09-learning-shapeless.md  2013-06-19-macro-supported-dsls-for-schema-bindings.md  2013-06-21-macro-methods-and-subtypes.md  2013-06-28-singleton-types-for-literals-in-scala.md  2013-07-11-fake-type-providers-part-2.md  2013-07-12-vampire-methods-for-structural-types.md  2013-08-26-iteratees-are-easy.md  2013-08-27-lists-are-even-easier.md  2013-08-30-horrible-code.md  2013-08-31-feeding-our-vampires.md  2013-09-02-potemkin-val-age.md  2013-09-06-quasiquotes-for-multiple-parameter-lists.md  2013-10-03-natural-vampires.md  2013-10-13-ordering-case-classes.md  2013-10-17-explicit-defaults-in-scala.md  2014-06-14-partitioning-by-constructor.md  2014-07-04-foldable-considered-confusing.md  2015-06-21-deriving-incomplete-type-class-instances.md  2015-07-11-roll-your-own-scala.md  2015-10-13-goodbye-twitter.md  2015-11-08-type-classes-and-generic-derivation.md  2015-12-17-error-accumulating-decoders-in-circe.md  2016-01-08-yet-another-iteratee-library.md  2016-01-14-configuring-generic-derivation.md  2016-02-14-json-numbers-in-circe-0.3.0.md  2016-03-24-a-note-about-lambdaconf.md  2016-12-24-best-new-fiction-of-2016.md  2018-12-31-best-new-fiction-of-2018.md  2019-09-01-jdg-and-the-fp-community.md  2019-09-06-fuck-yeah-type-erasure.md  2019-09-10-cats-2.0-migration.md  2019-09-11-why-parallel.md  2019-09-23-scala-and-the-visitor-pattern.md  2019-09-30-implicit-scope-and-cats.md  2020-01-01-best-new-fiction-of-2019.md  2020-07-24-fantasyland-code-of-professionalism.md  (+4 more)
content/about/: _index.md  index.md
content/archived/: 2019-08-29-defense-of-saying-fuck.md
content/drafts/: 2013-09-13-recursively-recovering-nesting.markdown
content/posts/: 2012-08-12-spqr.markdown  2012-12-07-tu-quoque.markdown  2013-03-28-better-scala-syntax-highlighting-for-hakyll.markdown  2013-03-28-better-scala-syntax-highlighting-in-hakyll.markdown  2013-05-29-lots-of-little-trees.markdown  2013-06-05-applicative-validation-syntax-experiments.markdown  2013-06-05-applicative-validation-syntax.markdown  2013-06-07-lots-of-little-trees-part-2.markdown  2013-06-09-learning-shapeless.markdown  2013-06-19-macro-supported-dsls-for-schema-bindings.markdown  2013-06-21-macro-methods-and-subtypes.markdown  2013-06-28-singleton-types-for-literals-in-scala.markdown  2013-07-11-fake-type-providers-part-2.markdown  2013-07-12-vampire-methods-for-structural-types.markdown  2013-08-26-iteratees-are-easy.markdown  2013-08-27-lists-are-even-easier.markdown  2013-08-30-fake-untyped-macros.markdown  2013-08-30-horrible-code.markdown  2013-08-31-feeding-our-vampires.markdown  2013-09-02-potemkin-val-age.markdown  2013-09-06-quasiquotes-for-multiple-parameter-lists.markdown  2013-10-03-natural-vampires.markdown  2013-10-13-ordering-case-classes.markdown  2013-10-17-explicit-defaults-in-scala.markdown  2014-06-14-partitioning-by-constructor.markdown  2014-07-04-foldable-considered-confusing.markdown  2015-06-21-deriving-incomplete-type-class-instances.markdown  2015-07-11-roll-your-own-scala.md  2015-10-13-goodbye-twitter.markdown  2015-11-08-type-classes-and-generic-derivation.markdown  2015-12-17-error-accumulating-decoders-in-circe.markdown  2016-01-08-yet-another-iteratee-library.markdown  2016-01-14-configuring-generic-derivation.markdown  2016-02-14-json-numbers-in-circe-0.3.0.markdown  2016-03-24-a-note-about-lambdaconf.markdown  2016-12-24-best-new-fiction-of-2016.markdown  2018-12-31-best-new-fiction-of-2018.markdown  2019-08-29-defense-of-saying-fuck.markdown  2019-09-01-jdg-and-the-fp-community.markdown  2019-09-06-fuck-yeah-type-erasure.markdown  (+7 more)
content/running/: 342I1210.FIT  34372644.FIT  34475430.FIT  344F1250.FIT  34573545.FIT  346I3330.FIT  347E2758.FIT  34865926.FIT  348H2015.FIT  34970744.FIT  34A70029.FIT  34AE0423.FIT  34B62944.FIT  34C62922.FIT  34DG3759.FIT  34E85629.FIT  34F71331.FIT  34GI0649.FIT  34H71951.FIT  34HH3521.FIT  34I81300.FIT  34J74320.FIT  34JF4442.FIT  34K91123.FIT  34L92117.FIT  34MI0958.FIT  34NI1632.FIT  34O65410.FIT  34PG3010.FIT  34Q72242.FIT  34R90610.FIT  34RF2038.FIT  34S85019.FIT  34TI5538.FIT  34U70933.FIT  34UI3209.FIT  351H2101.FIT  35275900.FIT  35372616.FIT  35481507.FIT  (+396 more)
css/: bootstrap.less  colors.less  main.less  responsive.less  syntax.less  variables.less
css/bootstrap/: fixes.less  imports.less  (+1 more)
sass/: style.scss
src/: Main.hs
syntax/: scala.xml
templates/: 404.html  about.html  default.html  index.html  page.html  post-item-full.html  post-item.html  post-teaser.html  post.html  posts.html  tag-posts.html
(+19 files in other folders)
