name:          metaplasm
version:       0.0.0
description:   A Hakyll blog site 
copyright:     (c) 2012 Travis Brown
license-file:  LICENSE.txt
author:        Travis Brown
maintainer:    travisrobertbrown@gmail.com
build-type:    Simple
cabal-version: >= 1.2

library
  ghc-options:     -Wall -O2
  hs-source-dirs:  src
  exposed-modules:
    Data.FIT.Parse,
    Data.FIT.Parse.Format,
    Data.FIT.Parse.Util,
    --Data.Path,
    Data.Running,
    Data.Running.KML
  build-depends:
    aeson == 0.7.0.4,
    array == 0.5.0.0,
    --attoparsec == 0.10.4.0,
    --attoparsec-conduit == 1.0.1.2,
    base,
    binary >= 0.7.1.0,
    --blaze-builder-conduit == 1.0.0,
    blaze-html >= 0.7.0.2,
    --blaze-markup == 0.6.1.0,
    bytestring >= 0.10.4.0,
    containers == 0.5.5.1,
    --data-default == 0.5.1,
    --deepseq == 1.3.0.2,
    either == 4.3.0.1,
    hakyll == 4.5.3.0,
    filepath,
    mtl == 2.1.3.1,
    old-locale == 1.0.0.6,
    pandoc == 1.12.4.2,
    --process == 1.1.0.2, 
    shakespeare == 2.0.0.3,
    --shakespeare-js == 1.2.0.4,
    split == 0.2.2,
    statistics == 0.11.0.3,
    text == 1.1.1.3,
    time == 1.4.2,
    --template-haskell == 2.9.0.0,
    --transformers >= 0.3.0.0,
    vector-space == 0.8.6,
    xml-conduit == 1.2.0.2,
    xml-hamlet == 0.4.0.8

executable site
  ghc-options:     -rtsopts -Wall -O2
  hs-source-dirs:  src
  main-is:         Main.hs

