name:                metaplasm
version:             0.2.0.0
description:         A Hakyll blog site
homepage:            https://github.com/travisbrown/metaplasm
license:             Apache-2
license-file:        LICENSE.txt
author:              Travis Brown
maintainer:          travisrobertbrown@gmail.com
copyright:           2016 Travis Brown
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.FIT.Parse
                     , Data.FIT.Parse.Format
                     , Data.FIT.Parse.Util
                     , Data.Running
                     , Data.Running.KML
                     , Metaplasm.Config
                     , Metaplasm.Running
                     , Metaplasm.Tags
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , array
                     , binary
                     , blaze-html
                     , bytestring
                     , containers
                     , either
                     , hakyll
                     , mtl
                     , shakespeare
                     , split
                     , statistics
                     , text
                     , time
                     , vector-space
                     , xml-conduit
                     , xml-hamlet
  default-language:    Haskell2010

executable site
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , filepath
                     , hakyll
                     , http-conduit
                     , metaplasm
                     , pandoc
                     , split
                     , xml-conduit
  default-language:    Haskell2010

test-suite metaplasm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , metaplasm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/travisbrown/metaplasm
